--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 
 body {
-	background: url('https://i.pinimg.com/originals/43/66/64/4366644a9515f37e7bf463d394ec647d.jpg');
+	background: url('4366644a9515f37e7bf463d394ec647d.jpg');
 	background-size: 100vw auto; 
 	background-repeat: repeat;
 	margin: 0!important;
